Used fixed headers. Had to use "<div class=" in order to manipulate headers. Used ".offset" class to prevent fixed header to overlap the tables.

--- a/style.css
+++ b/style.css
@@ -1,43 +1,83 @@
 /*TO RESET DEFAULT TABLE STYLES*/
-table, caption, tbody, tfoot, thead, tr, th, td {
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
     margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-  }
-  table {
+}
+
+table {
     border-collapse: collapse;
-    border-spacing: 0;}
+    border-spacing: 0;
+}
+
 /*new table style begings.*/
-table{
+body{
+    height: 3000px;
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica;
+}
+.offset{
+    margin-top: 0;
     
+    padding-top: 200px;
+    text-align: left;
+    transition: .3s;
+    font-size: 30px;
+
+}
+.header{
+    position: fixed;
+    width: 100%;
+    height: 75px;
+    font-weight: bold;
+    text-align: left;
+    background: aqua;
+    transition: 0.3s;
+    color: rgb(255, 255, 255);
+    padding: 62px;
+    
+}
+
+table {
+
     width: auto;
 
 }
 
-th{
-    
+th {
+
     text-align: left;
 
 }
-caption { 
-    
-    text-align: center;
 
-}
-table, th, td{
+
+
+table,
+th,
+td {
 
     border: 1px solid #000;
     border-collapse: collapse;
 }
 
-th,td{
+th,
+td {
     padding: 10px;
 
 }
 
-tr:nth-child(even){
-    background-color:aqua;
+tr:nth-child(even) {
+    background-color: aqua;
+    color: azure;
 }
